# cg-fp

./: .gitignore  Makefile  TODO.txt  app.h  build.sh  camera.h  frag.glsl  input.h  light_update.glsl  main  main.cpp  run.sh  scene.h  sdl.h  shader.h  shell.nix  vert.glsl
shaders/: common.glsl  frag.glsl  light_update.glsl
src/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  input.h  main.cpp  scene.h  sdl.h  shader.cpp  shader.h  util.h
